// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Tag 1
    </span>
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      <a
        href="https://github.com/wmstool-design/wmstool-design/issues/1862"
      >
        Link
      </a>
    </span>
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Tag 2
    </span>
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Prevent Default
    </span>
    <i
      class="anticon anticon-cross"
    />
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="wmstool-tag wmstool-tag-checkable wmstool-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="wmstool-tag wmstool-tag-checkable wmstool-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="wmstool-tag wmstool-tag-checkable wmstool-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="wmstool-tag wmstool-tag-magenta"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        magenta
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-red"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        red
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-volcano"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        volcano
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-orange"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        orange
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-gold"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        gold
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-lime"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        lime
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-green"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        green
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-cyan"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        cyan
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-blue"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        blue
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-geekblue"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        geekblue
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-purple"
      data-show="true"
    >
      <span
        class="wmstool-tag-text"
      >
        purple
      </span>
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="wmstool-tag wmstool-tag-has-color"
      data-show="true"
      style="background-color:#f50"
    >
      <span
        class="wmstool-tag-text"
      >
        #f50
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-has-color"
      data-show="true"
      style="background-color:#2db7f5"
    >
      <span
        class="wmstool-tag-text"
      >
        #2db7f5
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-has-color"
      data-show="true"
      style="background-color:#87d068"
    >
      <span
        class="wmstool-tag-text"
      >
        #87d068
      </span>
    </div>
    <div
      class="wmstool-tag wmstool-tag-has-color"
      data-show="true"
      style="background-color:#108ee9"
    >
      <span
        class="wmstool-tag-text"
      >
        #108ee9
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Unremovable
    </span>
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Tag 2
    </span>
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
  >
    <span
      class="wmstool-tag-text"
    >
      Tag 3
    </span>
    <i
      class="anticon anticon-cross"
    />
  </div>
  <div
    class="wmstool-tag"
    data-show="true"
    style="background:#fff;border-style:dashed"
  >
    <span
      class="wmstool-tag-text"
    >
      <i
        class="anticon anticon-plus"
      />
       New Tag
    </span>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="wmstool-tag wmstool-tag-checkable"
  >
    Movies
  </div>
  <div
    class="wmstool-tag wmstool-tag-checkable"
  >
    Books
  </div>
  <div
    class="wmstool-tag wmstool-tag-checkable"
  >
    Music
  </div>
  <div
    class="wmstool-tag wmstool-tag-checkable"
  >
    Sports
  </div>
</div>
`;
